# woozle

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_woozle.py
woozle/: main.py
